OverFlow Issue fixed in the slider

--- a/src/components/Home/Banner/Slider.scss
+++ b/src/components/Home/Banner/Slider.scss
@@ -2,7 +2,8 @@
 
 .slider-container {
   width: 100vw;
-  height: 42vw;
+  height: 42.5vw;
+  overflow: hidden;
   //   height: 150px;
   
   //   @include xl{
